# twittersmh

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample_json_v1.txt  tokenizer.py  tweepy_test.py  tweepy_v1.py  tweepy_v2.py
data/: corpus.csv  searchtweetsv2.json  tags_corpus.csv  tags_corpus.pkl  tweepy_corpus.csv  tweepy_corpus_de_cleaned_dec_to_feb.csv  tweepy_corpus_discarded_tweets.csv  tweepy_corpus_saved_tweets.csv  tweepy_expansions_dec_to_feb.csv  tweepy_v1_corpus.csv  tweepy_v1_corpus.csv.bak
data/archived/: tags_corpus.csv  tweepy_v2_corpus.csv.bak  tweepy_v2_expansions.csv.bak  tweepy_v2_sample_json.txt
gettags/: gettags.ipynb  gettags.py
parser/: parser.ipynb  parser.py
scraper/: medien.py  personen.py  test.ipynb  tweepy_pagination.py  tweepy_v1.py  tweepy_v1_fullarchive.py  tweepy_v2.py  tweepy_v2_fullarchive.py  tweepy_v2_new.py  tweepy_v2_threads.py
streamlit/: tweetsort.py
tweetsort/: streamlit.py
