[tool.poetry]
name = "twittersmh"
version = "0.0.1"
description = "Collecting and analysing Twitter data on the project #ichbinsophiescholl"
authors = ["lguenth <mail@lukeguenther.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<=3.9"
tweepy = "^4.4.0"
numpy = "^1.21.4"
pandas = "^1.3.4"
streamlit = "^1.2.0"
watchdog = "^2.1.6"
google-auth = "^2.3.3"
gspread-pandas = "^2.3.1"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
searchtweets = "^1.7.6"
black = "^21.12b0"
bokeh = "^2.4.2"
nltk = "^3.6.6"
gensim = "^4.1.2"
spacy = "^3.2.1"
searchtweets-v2 = "^1.1.1"
tqdm = "^4.62.3"
emoji = "^1.6.1"

[tool.poetry.dev-dependencies]
tweepy = "^4.4.0"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
